--- a/README.org
+++ b/README.org
@@ -42,25 +42,31 @@ mantido. O OpenJDK foi escolhido por ser uma implementação de fonte
 aberta com licença GPL-2.0 da plataforma Java SE.
 
 As versões utilizadas para desenvolvimento são a seguinte:
-#+begin_src sh :results output raw
+#+begin_src sh :results output html
   java --version
 #+end_src
 
 #+RESULTS:
+#+begin_export html
 openjdk 17.0.7 2023-04-18
 OpenJDK Runtime Environment (Red_Hat-17.0.7.0.7-4.fc38) (build 17.0.7+7)
 OpenJDK 64-Bit Server VM (Red_Hat-17.0.7.0.7-4.fc38) (build 17.0.7+7, mixed mode, sharing)
+#+end_export
 
-#+begin_src sh :results output raw
+
+#+begin_src sh :results output html
   mvn --version
 #+end_src
 
 #+RESULTS:
+#+begin_export html
 Apache Maven 3.8.6 (Red Hat 3.8.6-4)
 Maven home: /usr/share/maven
 Java version: 17.0.7, vendor: Red Hat, Inc., runtime: /usr/lib/jvm/java-17-openjdk-17.0.7.0.7-5.fc38.x86_64
 Default locale: pt_BR, platform encoding: UTF-8
 OS name: "linux", version: "6.3.8-200.fc38.x86_64", arch: "amd64", family: "unix"
+#+end_export
+
 
 * TODO mostrar versão do Jsoup após instalação
 
